--- a/databases/postgres/db.yaml
+++ b/databases/postgres/db.yaml
@@ -24,6 +24,9 @@ spec:
         operator: Equal
         value: db
 
+  monitoring:
+    enablePodMonitor: true
+
   postgresql:
     parameters:
       # https://pgtune.leopard.in.ua
