add servicemonitor for statsd exporter

--- a/argocd/applications/prometheus-statsd-exporter.yaml
+++ b/argocd/applications/prometheus-statsd-exporter.yaml
@@ -18,6 +18,9 @@ spec:
       values: |
         replicaCount: 2
 
+        serviceMonitor:
+          enabled: true
+
         statsd:
           mappingConfig: |
             ## Prometheus Statsd Exporter mapping for Mastodon 4.0+
