enable monitoring manifests

--- a/argocd/kustomization.yaml
+++ b/argocd/kustomization.yaml
@@ -9,6 +9,7 @@ resources:
   - projects/monitoring.yaml
   - applications/kube-prometheus-stack.yaml
   - applications/prometheus-operator-crds.yaml
+  - applications/monitoring-manifests.yaml
   - applications/ingress-nginx.yaml
   - applications/keda.yaml
   - applications/kube-state-metrics.yaml
