--- a/mastodon-chart/templates/keda-web.yaml
+++ b/mastodon-chart/templates/keda-web.yaml
@@ -23,7 +23,7 @@ spec:
       metadata:
         serverAddress: {{ .Values.keda.prometheusAddress }}
         metricName: access_frequency
-        query: sum(rate(nginx_ingress_controller_requests{service="{{ include "mastodon.fullname" . }}-web"}[1m]))
+        query: sum(rate(nginx_ingress_controller_requests{exported_service="{{ include "mastodon.fullname" . }}-web"}[1m]))
         threshold: {{ .Values.keda.web.threshold | quote }}
         ignoreNullValues: {{ .Values.keda.web.ignoreNullValues | quote }}
     {{- if .Values.keda.web.memoryUtilizationScaling }}
