--- a/mastodon-chart/templates/servicemonitor-streaming.yaml
+++ b/mastodon-chart/templates/servicemonitor-streaming.yaml
@@ -3,6 +3,9 @@ apiVersion: monitoring.coreos.com/v1
 kind: PodMonitor
 metadata:
   name: {{ include "mastodon.fullname" . }}-streaming
+  labels:
+    {{- include "mastodon.labels" . | nindent 4 }}
+    app.kubernetes.io/component: streaming
 spec:
   selector:
     matchLabels:
