disable default kublet rules, are not exposed

--- a/argocd/applications/kube-prometheus-stack.yaml
+++ b/argocd/applications/kube-prometheus-stack.yaml
@@ -13,6 +13,10 @@ spec:
     helm:
       skipCrds: true
       values: |
+        defaultRules:
+          rules:
+            kublet: false
+
         grafana:
           ingress:
             enabled: true
