disable default kublet rules, are not exposed

--- a/argocd/applications/kube-prometheus-stack.yaml
+++ b/argocd/applications/kube-prometheus-stack.yaml
@@ -15,7 +15,8 @@ spec:
       values: |
         defaultRules:
           rules:
-            kublet: false
+            kubelet: false
+            kubeSchedulerAlerting: false
 
         grafana:
           ingress:
