--- a/argocd/applications/kube-prometheus-stack.yaml
+++ b/argocd/applications/kube-prometheus-stack.yaml
@@ -77,6 +77,10 @@ spec:
                     requests:
                       storage: 40Gi
 
+        alertmanagerSpec:
+          alertmanagerConfiguration:
+            - global-email-config
+
     repoURL: https://prometheus-community.github.io/helm-charts
     targetRevision: 45.7.1
   syncPolicy:
