--- a/argocd/configuration/1p-secrets.yaml
+++ b/argocd/configuration/1p-secrets.yaml
@@ -57,3 +57,15 @@ metadata:
   namespace: loki
 spec:
   itemPath: "vaults/dhwqy3tub7zdwf2zj6cv4lprlu/items/wueoloiapiehn7hks56r5ops7y"
+---
+# Creates a secret with the name: smtp-credentials-alertmanager
+# Contents:
+# - smtp_username: <content>
+# - smtp_password: <content>
+apiVersion: onepassword.com/v1
+kind: OnePasswordItem
+metadata:
+  name: smtp-credentials-alertmanager
+  namespace: monitoring
+spec:
+  itemPath: "vaults/dhwqy3tub7zdwf2zj6cv4lprlu/items/ci642yahclnvmjpwrpy3hnluse"
