--- a/mastodon-chart/templates/deployment-web-primary-only.yaml
+++ b/mastodon-chart/templates/deployment-web-primary-only.yaml
@@ -7,6 +7,10 @@ metadata:
     {{- include "mastodon.labels" . | nindent 4 }}
     app: {{ include "mastodon.fullname" . }}-web
     version: {{ .Chart.AppVersion | quote }}
+  {{- if .Values.web.annotations }}
+    annotations:
+      {{- toYaml .Values.web.annotations | nindent 4 }}
+  {{- end }}
   name: {{ include "mastodon.fullname" . }}-web-primary-db
 spec:
   replicas: {{ .Values.web.primaryDatabaseDeployment.replicaCount | default 1 }}
