--- a/mastodon-chart/templates/deployment-web.yaml
+++ b/mastodon-chart/templates/deployment-web.yaml
@@ -5,6 +5,10 @@ metadata:
     {{- include "mastodon.labels" . | nindent 4 }}
     app: {{ include "mastodon.fullname" . }}-web
     version: {{ .Chart.AppVersion | quote }}
+  {{- if .Values.web.annotations }}
+  annotations:
+    {{- toYaml .Values.web.annotations | nindent 4 }}
+  {{- end }}
   name: {{ include "mastodon.fullname" . }}-web
 spec:
   selector:
