--- a/mastodon-chart/values.yaml
+++ b/mastodon-chart/values.yaml
@@ -393,13 +393,17 @@ keda:
     queues:
       - name: default
         threshold: 5
+        activationThreshold: 5
         queue: default
       - name: ingress
         threshold: 5
+        activationThreshold: 5
         queue: ingress
       - name: pull
         threshold: 300
+        activationThreshold: 300
         queue: pull
       - name: push
         threshold: 5
+        activationThreshold: 5
         queue: push
