restart the streaming pods every 24 hours, it stops sending through data after about 36 hours

--- a/mastodon-chart/templates/deployment-streaming.yaml
+++ b/mastodon-chart/templates/deployment-streaming.yaml
@@ -77,4 +77,9 @@ spec:
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       serviceAccountName: {{ include "mastodon.serviceAccountName" . }}
-      terminationGracePeriodSeconds: 30
+      {{- if .Values.streaming.recycle }}
+      {{- if .Values.streaming.recycle.enabled }}
+      activeDeadlineSeconds: {{ .Values.streaming.recycle.activeDeadlineSeconds }}
+      terminationGracePeriodSeconds: {{ .Values.streaming.recycle.terminationGracePeriodSeconds }}
+      {{- end }}
+      {{- end }}
