Revert "restart the streaming pods every 24 hours, it stops sending through data after about 36 hours"
This reverts commit ff445745008464d4159fb57b6134f52e21e6485c.

--- a/mastodon-chart/templates/deployment-streaming.yaml
+++ b/mastodon-chart/templates/deployment-streaming.yaml
@@ -77,9 +77,4 @@ spec:
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       serviceAccountName: {{ include "mastodon.serviceAccountName" . }}
-      {{- if .Values.streaming.recycle }}
-      {{- if .Values.streaming.recycle.enabled }}
-      activeDeadlineSeconds: {{ .Values.streaming.recycle.activeDeadlineSeconds }}
-      terminationGracePeriodSeconds: {{ .Values.streaming.recycle.terminationGracePeriodSeconds }}
-      {{- end }}
-      {{- end }}
+      terminationGracePeriodSeconds: 30
