--- a/argocd/applications/kube-prometheus-stack.yaml
+++ b/argocd/applications/kube-prometheus-stack.yaml
@@ -83,6 +83,7 @@ spec:
             alertmanagerConfigSelector:
               matchLabels:
                 alertmanagerConfig: global
+            alertmanagerConfigMatcherStrategy: None
 
     repoURL: https://prometheus-community.github.io/helm-charts
     targetRevision: 45.8.1
