keep mijnderts inbox clean until I fix the notifications, sorry mijndert

--- a/monitoring/alertmanager/global-config.yaml
+++ b/monitoring/alertmanager/global-config.yaml
@@ -27,11 +27,11 @@ spec:
           authPassword:
             key: smtp_password
             name: smtp-credentials-alertmanager
-        - to: 'mijndert@toot.community'
-          from: notifications@ses.toot.community
-          sendResolved: true
-          smarthost: email-smtp.eu-west-1.amazonaws.com:587
-          authUsername: AKIA4XREBEBV5D3FVD5H
-          authPassword:
-            key: smtp_password
-            name: smtp-credentials-alertmanager
+#        - to: 'mijndert@toot.community'
+#          from: notifications@ses.toot.community
+#          sendResolved: true
+#          smarthost: email-smtp.eu-west-1.amazonaws.com:587
+#          authUsername: AKIA4XREBEBV5D3FVD5H
+#          authPassword:
+#            key: smtp_password
+#            name: smtp-credentials-alertmanager
