correct the matcher to only fire on warning, critical

--- a/monitoring/alertmanager/global-config.yaml
+++ b/monitoring/alertmanager/global-config.yaml
@@ -12,10 +12,8 @@ spec:
     groupInterval: 5m
     repeatInterval: 12h
     receiver: 'global-email-receiver'
-    routes:
-      - match:
-          severity: warning
-        receiver: 'global-email-receiver'
+    match:
+      severity: "warning|critical"
   receivers:
     - name: 'global-email-receiver'
       emailConfigs:
