disable a couple of rules as we cant scrape the control panel for DO

--- a/argocd/applications/kube-prometheus-stack.yaml
+++ b/argocd/applications/kube-prometheus-stack.yaml
@@ -13,6 +13,13 @@ spec:
     helm:
       skipCrds: true
       values: |
+        defaultRules:
+          create: true
+            rules:
+              kubeControllerManager: false
+              kubeSchedulerAlerting: false
+              kubeSchedulerRecording: false
+
         grafana:
           ingress:
             enabled: true
