comment faulty line

--- a/argocd/applications/kube-prometheus-stack.yaml
+++ b/argocd/applications/kube-prometheus-stack.yaml
@@ -89,7 +89,7 @@ spec:
             replicas: 2
             alertmanagerConfigSelector:
               matchLabels:
-                alertmanagerConfig: _global
+                alertmanagerConfig: "_global"
             alertmanagerConfigMatcherStrategy:
               type: None
 
