--- a/monitoring/alertmanager/global-config.yaml
+++ b/monitoring/alertmanager/global-config.yaml
@@ -4,7 +4,7 @@ metadata:
   name: alertmanager-global-config
   namespace: monitoring
   labels:
-    alertmanagerConfig: global
+    alertmanagerConfig: globaldisabled
 spec:
   route:
     groupBy: [ 'job' ]
