--- a/argocd/applications/kube-prometheus-stack.yaml
+++ b/argocd/applications/kube-prometheus-stack.yaml
@@ -89,7 +89,7 @@ spec:
             replicas: 2
             alertmanagerConfigSelector:
               matchLabels:
-                alertmanagerConfig: "global"
+                alertmanagerConfig: global
             alertmanagerConfigMatcherStrategy:
               type: None
 
