--- a/argocd/applications/velero.yaml
+++ b/argocd/applications/velero.yaml
@@ -18,8 +18,30 @@ spec:
     targetRevision: 3.1.5
     helm:
       values: |
+        snapshotsEnabled: false
+        deployNodeAgent: true
+
+        nodeAgent:
+          resources:
+            requests:
+              cpu: 100m
+              memory: 128Mi
+            limits:
+              cpu: 500m
+              memory: 512Mi
+          tolerations:
+            - effect: NoSchedule
+              key: limit
+              operator: Equal
+              value: db
+            - effect: NoSchedule
+              key: limit
+              operator: Equal
+              value: sidekiq
+
         configuration:
           provider: aws
+          defaultVolumesToFsBackup: true
 
           backupStorageLocation:
             name: default
@@ -28,19 +50,9 @@ spec:
               region: auto
               s3Url: https://0ae89288096e9795bb1a5d327d89aec5.r2.cloudflarestorage.com
 
-          volumeSnapshotLocation:
-            name: default
-            provider: digitalocean.com/velero
-
         initContainers:
           - name: velero-plugin-for-aws
             image: velero/velero-plugin-for-aws:v1.0.0
-            imagePullPolicy: IfNotPresent
-            volumeMounts:
-              - mountPath: /target
-                name: plugins
-          - name: digitalocean-plugin-for-velero
-            image: digitalocean/velero-plugin:v1.1.0
             imagePullPolicy: IfNotPresent
             volumeMounts:
               - mountPath: /target
