--- a/argocd/applications/velero.yaml
+++ b/argocd/applications/velero.yaml
@@ -25,6 +25,7 @@ spec:
           resources:
             requests:
               cpu: 1m
+              memory: 32Mi
             limits:
               memory: 512Mi
           tolerations:
