add chart to dashboard for streaming bytes

--- a/monitoring/dashboards/tootcommunity.yaml
+++ b/monitoring/dashboards/tootcommunity.yaml
@@ -27,10 +27,102 @@ data:
       "editable": true,
       "fiscalYearStartMonth": 0,
       "graphTooltip": 0,
-      "id": 32,
       "links": [],
       "liveNow": false,
       "panels": [
+        {
+          "datasource": {
+            "type": "prometheus",
+            "uid": "prometheus"
+          },
+          "fieldConfig": {
+            "defaults": {
+              "color": {
+                "mode": "palette-classic"
+              },
+              "custom": {
+                "axisCenteredZero": false,
+                "axisColorMode": "text",
+                "axisLabel": "",
+                "axisPlacement": "auto",
+                "barAlignment": 0,
+                "drawStyle": "line",
+                "fillOpacity": 0,
+                "gradientMode": "none",
+                "hideFrom": {
+                  "legend": false,
+                  "tooltip": false,
+                  "viz": false
+                },
+                "lineInterpolation": "linear",
+                "lineWidth": 1,
+                "pointSize": 5,
+                "scaleDistribution": {
+                  "type": "linear"
+                },
+                "showPoints": "auto",
+                "spanNulls": false,
+                "stacking": {
+                  "group": "A",
+                  "mode": "none"
+                },
+                "thresholdsStyle": {
+                  "mode": "off"
+                }
+              },
+              "mappings": [],
+              "thresholds": {
+                "mode": "absolute",
+                "steps": [
+                  {
+                    "color": "green",
+                    "value": null
+                  },
+                  {
+                    "color": "red",
+                    "value": 80
+                  }
+                ]
+              },
+              "unit": "bytes"
+            },
+            "overrides": []
+          },
+          "gridPos": {
+            "h": 8,
+            "w": 12,
+            "x": 0,
+            "y": 0
+          },
+          "id": 2,
+          "options": {
+            "legend": {
+              "calcs": [],
+              "displayMode": "list",
+              "placement": "bottom",
+              "showLegend": true
+            },
+            "tooltip": {
+              "mode": "single",
+              "sort": "none"
+            }
+          },
+          "targets": [
+            {
+              "datasource": {
+                "type": "prometheus",
+                "uid": "prometheus"
+              },
+              "editorMode": "builder",
+              "expr": "sum(sort_desc(sum by (pod) (irate(container_network_receive_bytes_total{cluster=\"\",job=\"kubelet\",metrics_path=\"/metrics/cadvisor\",namespace=~\"tootcommunity\"}[4h:5m]) * on (namespace, pod) group_left (workload, workload_type) namespace_workload_pod:kube_pod_owner:relabel{cluster=\"\",namespace=~\"tootcommunity\",workload=~\"tootcommunity-mastodon-streaming\",workload_type=\"deployment\"})))",
+              "key": "Q-e3317053-14bd-47e1-9360-bedbd9510cbc-0",
+              "range": true,
+              "refId": "A"
+            }
+          ],
+          "title": "Data transferred for Streaming",
+          "type": "timeseries"
+        },
         {
           "datasource": {
             "type": "prometheus",
@@ -92,7 +184,7 @@ data:
             "h": 8,
             "w": 12,
             "x": 0,
-            "y": 0
+            "y": 8
           },
           "id": 1,
           "options": {
@@ -148,7 +240,7 @@ data:
         "list": []
       },
       "time": {
-        "from": "now-12h",
+        "from": "now-7d",
         "to": "now"
       },
       "timepicker": {},
