set automergeType to branch, reduce pr spam

--- a/renovate.json
+++ b/renovate.json
@@ -22,8 +22,9 @@
         "!cloudnative-pg",
         "!ghcr.io/mastodon/mastodon",
         "!asonix/relay"
-      ]
+      ],
+      "automergeType": "branch"
     }
   ],
-  "ignoreTests": "true"
+  "ignoreTests": true
 }
