rubusta-krr recommendation for haproxy

--- a/haproxy-chart/values.yaml
+++ b/haproxy-chart/values.yaml
@@ -35,7 +35,9 @@ service:
 
 resources:
   requests:
-    cpu: 100m
+    cpu: 27m
+    memory: 100Mi
+  limits:
     memory: 100Mi
 
 nodeSelector: {}
